chore{scope}: Setup head, tailwind.config and tailwind-hyphens
- Installed Tailwind Hyphens
- Configured Tailwind Config
- Included meta and link tags in the head

{breaking_change}{footer}

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl-NL" prefix="og: http://ogp.me/ns#" class="scroll-smooth">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Inspire Breda - Coffee, Cafe &amp; Cocktails</title>
+    <meta name="description" content="Met uitzicht op de Grote Markt van Breda genieten van de lekkerste koffie, gezonde lunch en afsluiten met een speciaalbiertje of de perfecte cocktail.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://inspirebreda.nl">
+    <meta name="author" content="Honk Twee Breda">
+    <meta name="web-author" content="André Kolmeijer">
+    <meta name="copyright" content="Inspire Coffee Company" />
+    <meta name="geo.region" content="NL-NB" />
+    <meta name="geo.placename" content="Breda" />
+    <meta name="geo.position" content="52.15517;5.38721" />
+    <!-- Link Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="nl-NL" />
+    <meta property="og:title" content="Inspire Breda - Coffee, Cafe & Cocktails" />
+    <meta property="og:description" content="Genieten van de lekkerste koffie, gezonde lunch óf een speciaalbiertje." />
+    <meta property="og:url" content="https://inspirebreda.nl" />
+    <meta property="og:image" content="https://inspirebreda.nl/img/banner-mobile.jpg" />
+    <meta property="og:image:alt" content="Vooraanzicht van Inspire Breda" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;500;600;700;900&display=swap" rel="stylesheet">
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- Smooth Scroll Polyfill -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/iamdustan-smoothscroll/0.4.0/smoothscroll.min.js"></script>
+    <!-- Smooth Scrolling -->
+    <script defer type="text/javascript" src="./js/smoothscroll.js"></script>
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
