refactor: prettier format

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="nl-NL" prefix="og: http://ogp.me/ns#" class="scroll-smooth">
-
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inspire Breda - Coffee, Cafe &amp; Cocktails</title>
-    <meta name="description" content="Met uitzicht op de Grote Markt van Breda genieten van de lekkerste koffie, gezonde lunch en afsluiten met een speciaalbiertje of de perfecte cocktail.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://inspirebreda.nl">
-    <meta name="author" content="Honk Twee Breda">
-    <meta name="web-author" content="André Kolmeijer">
+    <meta name="description" content="Met uitzicht op de Grote Markt van Breda genieten van de lekkerste koffie, gezonde lunch en afsluiten met een speciaalbiertje of de perfecte cocktail." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://inspirebreda.nl" />
+    <meta name="author" content="Honk Twee Breda" />
+    <meta name="web-author" content="André Kolmeijer" />
     <meta name="copyright" content="Inspire Coffee Company" />
     <meta name="geo.region" content="NL-NB" />
     <meta name="geo.placename" content="Breda" />
@@ -26,14 +25,14 @@
     <meta property="og:image:alt" content="Vooraanzicht van Inspire Breda" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;500;600;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;500;600;700;900&display=swap" rel="stylesheet" />
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- Smooth Scroll Polyfill -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/iamdustan-smoothscroll/0.4.0/smoothscroll.min.js"></script>
     <!-- Smooth Scrolling -->
@@ -44,5 +43,4 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
-
 </html>
