refactor{scope}: brought all the code from the Alpine project in
- Brought all the HTML in and refactored from Alpine to Vue;
- Split the different sections over components;
- Created a DataStore to replace the AlpineStore;
- Turned the Contact icon into it's own component;
- Brought the Structured Data into it's own component;
- Removed the 'second' variant from tailwind.config.js and Footer (Alpine's <template> tags could be removed);
- Removed the scripts for the smooth scolling polyfill from index.html and installed as a dependency;
- Added an import statement and a function call for the polyfill into App.vue;
- Removed class to hide the scrollbar from tailwind.css and installed as a dependency; and,
- Updated the corresponding classes in the Welcome and Menu sections;

{breaking_change}{footer}

--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <!-- Smooth Scroll Polyfill -->
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/iamdustan-smoothscroll/0.4.0/smoothscroll.min.js"></script>
-    <!-- Smooth Scrolling -->
-    <script defer type="text/javascript" src="./js/smoothscroll.js"></script>
   </head>
 
-  <body>
+  <body class="border-t-2 border-inspire-orange bg-inspire-white font-sans antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
