build: prefix env vars with VITE_

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Inspire Breda - Coffee, Cafe &amp; Cocktails</title>
     <meta name="description" content="Met uitzicht op de Grote Markt van Breda genieten van de lekkerste koffie, gezonde lunch en afsluiten met een speciaalbiertje of de perfecte cocktail." />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="<%- BASE_URL %>" />
+    <link rel="canonical" href="<%- VITE_BASE_URL %>" />
     <meta name="author" content="Honk Twee Breda" />
     <meta name="web-author" content="André Kolmeijer" />
     <meta name="copyright" content="Inspire Coffee Company" />
