--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta property="og:locale" content="nl-NL" />
     <meta property="og:title" content="Inspire Breda - Coffee, Cafe & Cocktails" />
     <meta property="og:description" content="Genieten van de lekkerste koffie, gezonde lunch óf een speciaalbiertje." />
-    <meta property="og:url" content="https://inspirebreda.nl" />
-    <meta property="og:image" content="https://inspirebreda.nl/img/banner-mobile.jpg" />
+    <meta property="og:url" content="<%- VITE_BASE_URL %>" />
+    <meta property="og:image" content="<%- VITE_BASE_URL %>/img/banner-mobile.jpg" />
     <meta property="og:image:alt" content="Vooraanzicht van Inspire Breda" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Fonts -->
