--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="manifest" href="/site.webmanifest" />
   </head>
 
-  <body class="border-t-2 border-inspire-orange bg-inspire-white font-sans antialiased">
+  <body class="border-inspire-orange bg-inspire-white font-sans antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
